Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
-
76d5c4992 (dev), 01fd6d478 (6.6), ca495539b (tqtc/lts-6.5)
Description
please see the attached example.
reproducible procedure.
- run minimal-qml_keyevent (compositor)
- run Top,Middle,Bottom
- press N or D key
the compositor will receive key event, and the forward function seems to work, but it will make the `Bottom` client key signal handle enter infinitely.
Attachments
For Gerrit Dashboard: QTBUG-118042 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
512257,5 | Issue keyReleaseEvent regardless of focus | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
513809,2 | Issue keyReleaseEvent regardless of focus | 6.6 | qt/qtwayland | Status: MERGED | +2 | 0 |
513926,2 | Issue keyReleaseEvent regardless of focus | tqtc/lts-6.5 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |