Issue keyReleaseEvent regardless of focus

In some cases like using Key.forwardTo, keyReleaseEvent is ignored.
It should be generated regardless of focus.

Fixes: QTBUG-118042
Pick-to: 6.6 6.5
Change-Id: I154a27542c73264c3238d645e9b18e869c60b19e
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>